@@ -2,6 +2,8 @@
 	Bug fixes:
 	* ldns-zplit output and error messages fixed (patch from Shane Kerr,
 	bug id 190)
+	* rdata.c memory leaks on error and allocation checks fixed (patch
+	from Shane Kerr, bug id 188)
 
 1.3
 	Base library:
